# qfin-projects

./: README.md
sem1-trading-competition/: readme.md
sem1-trading-competition/round 1/: README.md
sem1-trading-competition/round 1/data/: SOBER.csv  SOBER_UNTESTED_DATA.csv  UEC.csv
sem1-trading-competition/round 1/final version/: BaseStrategy.py  PanicTrader.py  SOBERStrategy.py  UECStrategy.py  backtester.py  requirements.txt
sem1-trading-competition/round 1/grid search/try2/: .gitignore  CMakeLists.txt  README.md
sem1-trading-competition/round 1/grid search/try2/data/: prac.ipynb
sem1-trading-competition/round 1/grid search/try2/include/: Backtester.h
sem1-trading-competition/round 1/grid search/try2/src/: Backtester.cpp  FuzzerMain.cpp
sem1-trading-competition/round 1/research/: SOBER_research.ipynb  UEC_research.ipynb
sem1-trading-competition/round 2/final version/: PanicTrader.py  backtester.py  backtester_original.py  grid_search.py
sem1-trading-competition/round 2/grid_search_results/: a.ipynb  grid_search_results.csv
sem1-trading-competition/round 3/data/: ORE.csv  SHEEP.csv
sem1-trading-competition/round 3/final version/: PanicTrader.py
sem1-trading-competition/round 3/grid search/: fuzz  fuzzing_pnl_summary.csv  main.cpp  market_data_report.csv  plot_grid_search_3d.py  trade_signals_report.csv
sem2-trading-bot/: .gitignore  BOT_OVERVIEW.md  README.md  base.py  launch_explorer.sh  nifty_trader_manager.py  play_game.py  trading_explorer.py  trading_explorer_v2.py
sem2-trading-bot/research/: chart_settings.json
(+54 files in other folders)
